--- a/projects/p2/css/styles.css
+++ b/projects/p2/css/styles.css
@@ -1,17 +1,29 @@
 body {
-background-image: url(../images/90s.jpg);
+background-color: black;
+background-image: url(../images/backdrop3.gif);
+width: 1200px;
+margin: auto;
+}
+
+#everything
+{
+	margin: auto;
+	width: 1000px;
+	
 }
 
 
 #container {
 	width: 800px;
-	height: 2000px;
+	height: 3850px;
 	padding: 20px;
 	margin: auto;
-	margin-top: 50px;
+	margin-top:;
+	margin-left: 220px;
 	font-family: georgia;
 	background-color: white;
-	opacity: .9;
+	opacity: .8;
+	float: left;
 
 	
 }
@@ -28,17 +40,22 @@ h1 {
 #text {
 	width: 600;
 	height: 2000;
-	margin-left: 50px;
-	margin-top: 50px;
+	text-align: left;
+	padding: 100px;
+	
+	margin-top: 490px;
+
+
 	
 }
 
 p {
-	font-family: bell mt;
+	font-family: american typewriter;
 	font-style: light;
-	text-align: left;
-	font-size: 12pt;
+	
+	font-size: 11pt;
 	line-height: 15pt;
+	margin-top: 25px;
 
 	}
 
@@ -46,4 +63,93 @@ p {
 width: 200px;
 height: 200px;
 padding: 50px;
+margin-left: 50px;
+margin-top: 50px;
+
 }
+
+#title {
+
+	width: 90px;
+	height:90px;
+	margin-top: 30px;
+	margin-left: 310px;
+	
+	
+
+	
+}
+
+h1 {
+
+	font-family: h74 
+}
+
+
+#h2 {
+ 	font-family: futura;
+	font-style: bold;
+	font-size: 33;
+	text-align: center;
+	margin: auto;
+}
+
+h4 {
+	text-align: center;
+	margin: auto;
+	width: 450px;
+	height: 40px
+	font-family: gill sans;
+}
+
+#snoop {
+margin-left: 7px;
+
+}
+
+#intro{
+	width: 600;
+	height: 350;
+	padding: 100px;
+	margin: auto;
+	margin-top: 100px;
+	margin-bottom: 150px;
+
+}
+
+#photo
+{
+width: 195px;
+height: 200px;
+	float: right;
+	padding: 10px;
+}
+
+#menu {
+	width:150px;
+	height: 330px;
+	background: white;
+	float: left;
+	opacity: .8;
+	padding:20px;
+	margin: auto;
+	margin-top: 50px;
+	margin-left: px;
+	font-family: futura;
+	text-align: center;
+	position: fixed;
+	text-decoration: none;
+}
+
+a {
+	font-family: Gill sans;
+	color: black;
+	font-weight: 650;
+	text-decoration: none;
+
+
+}
+
+a:hover {
+	color: grey;
+	}
