--- a/projects/p6/css/styles.css
+++ b/projects/p6/css/styles.css
@@ -30,14 +30,6 @@
 	100% {transform: translatex(0);}
 }
 
- @keyframes flash {
-	0% {position: absolute;
-    left: 796px;
-    top: 624px;
-
-    100% {position: absolute;
-    	top: 200px;
-    	left: 0px;}
 
  @keyframes shoot {
 	0% {position: absolute;
@@ -52,10 +44,6 @@
 
 
 
-
-a:hover {
-	background-color: orange;
-}
 
 
 }
@@ -793,9 +781,8 @@ a:hover {
 }
 
 .to3 {
-	animation-name: flash;
-	animation-duration: 1s;
-	animation-delay:2s;
+	animation-name: pulsate;
+	animation-duration: 4.4s;
 	animation-iteration-count: infinite;
 	font-family: futura;
 	font-size: 8pt;
@@ -871,13 +858,7 @@ a{
     color: black;
 }
 
-a:hover; {
-	color: red;
-}
 
-a:visited; {
-	color: black;
-}
 
 
 .o {
@@ -930,7 +911,7 @@ a:visited; {
 	animation-duration: 6s;
 	animation-iteration-count: infinite;
 	font-family: futura;
-	font-size: 8pt;
+	font-size: 20pt;
 	-webkit-animation-timing-function: ease-in;
     position: absolute;
     left: 1030px;
@@ -942,7 +923,7 @@ a:visited; {
 	animation-duration: 4.2s;
 	animation-iteration-count: infinite;
 	font-family: futura;
-	font-size: 8pt;
+	font-size: 20pt;
 	-webkit-animation-timing-function: ease-in;
     position: absolute;
     left: 800px;
